# little-shell

./: Cargo.toml  README.md
src/: commands.rs  completion.rs  main.rs  pipeline.rs  redirection.rs
