[package]
name = "little-shell"
version = "0.0.1"
authors = ["Lukas Metzler <lukas.metzler@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/lukasmetzler/little-shell"
license = "MIT"

[dependencies]
os_pipe = "1.2.3"
rustyline = "17.0.2"
rustyline-derive = "0.11.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
bytes = "1.3.0"
